# cola-package-template

./: .gitignore  README.md  config_registry.yml  manifest.mf  manifest.schema.yaml  pyproject.toml  pyrun.sh
_hooks/: setup-hook.sh
commands/_no_group/: config_command.py
commands/examples/: greet.py  hello.sh
libs/python/cola/: README.md  __init__.py  cli.py  config.py  output.py  settings.py
libs/python/mypkg/: __init__.py
libs/sh/: cola.sh  lib.sh
tests/: test_config.py  test_output.py  test_settings.py
